<resources>
    <string name="app_name">Project Cerberus Admin</string>
    <string name="employees_label">Employees</string>
    <string name="see_all_generics_item_name_placeholder">Name</string>
    <string name="add_employee_label">New Employee</string>
    <string name="Add_Employee_first_name_label_text">First Name:</string>
    <string name="add_employee_first_name_placeholder">Juan</string>
    <string name="add_employee_last_name_label_text">Last Name:</string>
    <string name="add_employee_last_name_placeholder">Del Pueblo</string>
    <string name="add_employee_email_label_text">Email:</string>
    <string name="add_employees_email_placeholder">employee@ccsecurityservices.com</string>
    <string name="add_employee_phone_label_text">Phone Number:</string>
    <string name="add_employees_phone_placeholder">787-799-8686</string>
    <string name="add_employee_administrator_label">Administrator</string>
    <string name="add_employee_BTN_text">Add Employee</string>
    <string name="see_employees_details_erase_BTN_text">Erase Employee</string>
    <string name="see_employees_details_edit_BTN_text">Edit Information</string>
    <string name="see_generics_details_name_text_placeholder">Name: </string>
    <string name="see_employee_details_phone_text_placeholder">Phone Number: </string>
    <string name="see_employee_details_email_text_placeholder">Email: </string>
    <string name="see_employee_details_admin_text_placeholder">Employee Status: </string>
    <string name="see_employee_details_hasApp_text_placeholder">Registered: </string>
    <string name="edit_employee_label_text">Edit Employee</string>
    <string name="edit_employee_BTN_text">Edit Employee</string>
    <string name="see_all_locations_label_text">Locations</string>
    <string name="add_location_label_text">Add Location</string>
    <string name="add_location_name_label_text">Name:</string>
    <string name="add_location_entrances_label_text">Entrances:</string>
    <string name="add_location_positions_label_text">Positions:</string>
    <string name="add_location_suggested_count_label_text">Suggested Count:</string>
    <string name="add_location_BTN_text">Add location</string>
    <string name="add_location_photo_label_text">Upload Location Picture:</string>
    <string name="see_location_details_entrances_textView_text">Entrances:</string>
    <string name="see_location_details_suggestedCount_textView_text">Suggested Count:</string>
    <string name="see_location_details_positions_textView_text">Positions:</string>
    <string name="see_location_details_erase_BTN_text">Erase Location</string>
    <string name="add_event_label">Add New Event</string>
    <string name="Add_event_name_label_text">Name:</string>
    <string name="Add_event_dateTime_label_text">Date and Time:</string>
    <string name="add_event_dateTime_date_BTN_text">Pick Date</string>
    <string name="add_event_dateTime_time_BTN_text">Pick Time</string>
    <string name="add_event_location_label_text">Location:</string>
    <string name="add_event_duration_label_text">Duration:</string>
    <string name="add_event_headcount_label_text">Headcount:</string>
    <string name="add_event_inviteEmployee_BTN_text">Invite Employees</string>
    <string name="add_event_BTN_text">Add Event</string>
    <string name="add_event_duration_seekBar_indicator_label_text">0</string>
    <string name="add_event_description_label_text">Description:</string>
    <string name="invite_employee_activity_label_text">Invitations for:</string>
    <string name="invite_employee_finish_BTN_text">Employee Invited: 0/0</string>
    <string name="add_event_photo_label_text">Add Event Promotion:</string>
    <string name="see_all_events_activity_label_text">Events</string>
    <string name="see_event_details_activity_label_text">Event Details:</string>
    <string name="see_event_details_delete_event_BTN_text">Cancel Event</string>
    <string name="see_event_details_event_status_BTN_text">Event Status</string>
    <string name="see_event_details_date_label_text">Event Date:</string>
    <string name="see_event_details_time_label_text">Event Time:</string>
    <string name="see_event_details_location_name_label_text">Location Name:</string>
    <string name="see_event_details_duration_label_text">Duration:</string>
    <string name="see_event_details_headcount_label_text">Headcount:</string>
    <string name="see_event_status_activity_label_text">Status for:</string>
    <string name="see_event_status_headcount_label_text">Headcount: </string>
    <string name="see_employee_details_attendance_BTN_text">See Events Attendance</string>
    <string name="see_employee_attendance_activity_label_dummy_text">Juan del Pueblo</string>
    <string name="sign_in_parent_BTN_text">Sign IN</string>
    <string name="home_page_employee_name_label_text">Employee Full Name</string>
    <string name="home_page_employees_btn_label_text">Employees</string>
    <string name="home_page_locations_btn_label_text">Locations</string>
    <string name="home_page_events_btn_label_text">Events</string>
    <string name="home_page_logOut_BTN_label_text">Logout</string>
</resources>
